src/components/folders/Folder.css
.folder{
  margin: 0.5em;
  border-radius: 0.5em;
  padding: 0.25em 1em;
  width: calc( 30% - 2em);
  display: flex;
  align-items: center;
}
.folder-link{
  display: flex;
  align-items: center;
}
.folder-normal{
  color: black;
  border: 1px solid gray;
}
.folder-normal:hover{
  background: #f3f3f3;
}

.folder-selected{
  background: #e9f0fd;
  border: 1px solid #4b7ad1;
  color: #4b7ad1;
  cursor: pointer;
}
.folder-selected:hover{
  -webkit-box-shadow: inset 0px 0px 100px 100px rgba(248,248,248,0.5);
  -moz-box-shadow: inset 0px 0px 100px 100px rgba(248,248,248,0.5);
  box-shadow: inset 0px 0px 100px 100px rgba(248,248,248,0.5);
}

.folder-logo-icon{
  line-height: 1;
  color: #92ceff !important;
}
.folder-logo-icon > .anticon-folder > svg{
  width: 2.5em !important;
  height: 2.5em !important;
  padding-right: 0.5em;
}

.folder-normal:hover, .folder-label:hover{
  color: black !important;
}

